--- a/src/plugins/new-ui/public/webcomponents/compass.html
+++ b/src/plugins/new-ui/public/webcomponents/compass.html
@@ -27,42 +27,42 @@
         </metadata>
         <g id="g4986" transform="translate(22.040901,12.197624)">
           <g id="rose">
-            <circle id="circle" stroke-width="10" d="m 832.5,472.5 c 0,198.82251 -161.17749,360 -360,360 -198.82251,0 -360,-161.17749 -360,-360 0,-198.82251 161.17749,-360 360,-360 198.82251,0 360,161.17749 360,360 z" cy="472.5" stroke="{{ options.bezel }}" cx="472.5"
+            <circle id="circle" stroke-width="10" d="m 832.5,472.5 c 0,198.82251 -161.17749,360 -360,360 -198.82251,0 -360,-161.17749 -360,-360 0,-198.82251 161.17749,-360 360,-360 198.82251,0 360,161.17749 360,360 z" cy="472.5" stroke$="{{ options.bezel }}" cx="472.5"
             r="360" fill="none" />
-            <rect id="rect4935" y="96" width="10" x="467.5" height="30" fill="{{ options.bezel }}" />
-            <rect id="rect4937" transform="matrix(-1,0,0,-1,945,945)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
-            <rect id="rect4943" transform="matrix(0,1,-1,0,945,0)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
-            <rect id="rect4949" transform="matrix(0,-1,1,0,0,945)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
-            <rect id="rect4951" transform="matrix(0.70710678,-0.70710678,0.70710678,0.70710678,-195.71591,472.5)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
-            <rect id="rect4953" transform="matrix(-0.70710678,-0.70710678,0.70710678,-0.70710678,472.5,1140.7159)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
-            <rect id="rect4955" transform="matrix(-0.70710678,0.70710678,-0.70710678,-0.70710678,1140.7159,472.5)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
-            <rect id="rect4957" transform="matrix(0.70710678,0.70710678,-0.70710678,0.70710678,472.5,-195.71591)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
-            <g id="indicators" font-size="72px" font-family="Sans" style="word-spacing:0;letter-spacing:0;" letter-spacing="0" word-spacing="0" font-weight="bold">
-              <text id="indicator_n" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" line-height="125%" y="90.702766" x="471.9191">N</text>
-              <text id="text4961" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(-1,0,0,-1,943.74133,945)" line-height="125%" y="80.803268" x="471.90582">S</text>
-              <text id="text4965" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0,1,-1,0,0,0)" line-height="125%" y="-864.25293" x="471.84961">E</text>
-              <text id="text4967" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0,-1,1,0,0,0)" line-height="125%" y="80.859489" x="-473.15039">W</text>
-              <text id="text4969" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0.70710678,-0.70710678,0.70710678,0.70710678,0,0)" line-height="125%" font-size="72px" y="278.64713" x="-4.2105641">NW</text>
-              <text id="text4971" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(-0.70710678,-0.70710678,0.70710678,-0.70710678,0,0)" line-height="125%" font-size="72px" y="-393.78027" x="-670.0802">SW</text>
-              <text id="text4973" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(-0.70710678,0.70710678,-0.70710678,-0.70710678,0,0)" line-height="125%" font-size="72px" y="-1060.8452" x="1.1167512">SE</text>
-              <text id="text4975" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0.70710678,0.70710678,-0.70710678,0.70710678,0,0)" line-height="125%" font-size="72px" y="-391.12482" x="667.26764">NE</text>
+            <rect id="rect4935" y="96" width="10" x="467.5" height="30" fill$="{{ options.bezel }}" />
+            <rect id="rect4937" transform="matrix(-1,0,0,-1,945,945)" fill$="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
+            <rect id="rect4943" transform="matrix(0,1,-1,0,945,0)" fill$="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
+            <rect id="rect4949" transform="matrix(0,-1,1,0,0,945)" fill$="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
+            <rect id="rect4951" transform="matrix(0.70710678,-0.70710678,0.70710678,0.70710678,-195.71591,472.5)" fill$="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
+            <rect id="rect4953" transform="matrix(-0.70710678,-0.70710678,0.70710678,-0.70710678,472.5,1140.7159)" fill$="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
+            <rect id="rect4955" transform="matrix(-0.70710678,0.70710678,-0.70710678,-0.70710678,1140.7159,472.5)" fill$="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
+            <rect id="rect4957" transform="matrix(0.70710678,0.70710678,-0.70710678,0.70710678,472.5,-195.71591)" fill$="{{ options.bezel }}" height="30" width="10" y="96" x="467.5" />
+            <g id="indicators" font-size="72px" font-family="Helvetica Neue,Helvetica,Arial,sans-serif" style="word-spacing:0;letter-spacing:0;" letter-spacing="0" word-spacing="0" font-weight="bold">
+              <text id="indicator_n" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" line-height="125%" y="90.702766" x="471.9191">N</text>
+              <text id="text4961" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(-1,0,0,-1,943.74133,945)" line-height="125%" y="80.803268" x="471.90582">S</text>
+              <text id="text4965" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0,1,-1,0,0,0)" line-height="125%" y="-864.25293" x="471.84961">E</text>
+              <text id="text4967" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0,-1,1,0,0,0)" line-height="125%" y="80.859489" x="-473.15039">W</text>
+              <text id="text4969" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0.70710678,-0.70710678,0.70710678,0.70710678,0,0)" line-height="125%" font-size="72px" y="278.64713" x="-4.2105641">NW</text>
+              <text id="text4971" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(-0.70710678,-0.70710678,0.70710678,-0.70710678,0,0)" line-height="125%" font-size="72px" y="-393.78027" x="-670.0802">SW</text>
+              <text id="text4973" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(-0.70710678,0.70710678,-0.70710678,-0.70710678,0,0)" line-height="125%" font-size="72px" y="-1060.8452" x="1.1167512">SE</text>
+              <text id="text4975" fill$="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0.70710678,0.70710678,-0.70710678,0.70710678,0,0)" line-height="125%" font-size="72px" y="-391.12482" x="667.26764">NE</text>
             </g>
           </g>
 
-          <text id="lock" fill="{{ options.bezel }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Sans" font-size="120px" letter-spacing="0" line-height="100%" word-spacing="0" y="280" x="460.67117" title="Heading hold target">LK</text>
+          <text id="lock" fill$="{{ options.bezel }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Helvetica Neue,Helvetica,Arial,sans-serif" font-size="120px" letter-spacing="0" line-height="100%" word-spacing="0" y="280" x="460.67117" title="Heading hold target">LK</text>
 
-          <text id="heading" fill="{{ options.headingFill }}" stroke="{{ options.bezel }}" stroke-width="{{ options.headingStrokeWidth }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Sans" font-size="250px" letter-spacing="0"
+          <text id="heading" fill$="{{ options.headingFill }}" stroke$="{{ options.bezel }}" stroke-width$="{{ options.headingStrokeWidth }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Helvetica Neue,Helvetica,Arial,sans-serif" font-size="250px" letter-spacing="0"
           line-height="125%" word-spacing="0" y="530" x="460.67117" font-weight="bold">{{heading}}</text>
 
-          <text id="target" fill="{{ options.bezel }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Sans" font-size="150px" letter-spacing="0" line-height="100%" word-spacing="0" y="680" x="460.67117" font-weight="bold"
+          <text id="target" fill$="{{ options.bezel }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Helvetica Neue,Helvetica,Arial,sans-serif" font-size="150px" letter-spacing="0" line-height="100%" word-spacing="0" y="680" x="460.67117" font-weight="bold"
           title="Heading hold target">{{target}}</text>
 
           <g id="indicator">
-            <path fill="{{ options.bezel }}" d="m 471.41747,-25.529456 c 35.08805,139.334496 35.04692,139.182386 35.04692,139.182386 l -69.01546,0 z" style="fill-opacity:1;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+            <path fill$="{{ options.indicator }}" d="m 471.41747,-25.529456 c 35.08805,139.334496 35.04692,139.182386 35.04692,139.182386 l -69.01546,0 z" style="fill-opacity:1;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
             />
           </g>
           <g id="bearing">
-            <path fill="{{ options.bezel }}" style="fill-opacity:1;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" d="m 472.79747,253.34433 c -35.08391,-139.0359 -35.0428,-138.88412 -35.0428,-138.88412 l 69.00736,0 z" />
+            <path fill$="{{ options.bezel }}" style="fill-opacity:1;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" d="m 472.79747,253.34433 c -35.08391,-139.0359 -35.0428,-138.88412 -35.0428,-138.88412 l 69.00736,0 z" />
           </g>
         </g>
       </svg>
@@ -73,30 +73,27 @@
       is: 'orov-newui-compass',
       properties: {
         bearing: {
-          value: function() {
-            return undefined;
-          },
+          observer: 'setBearing',
           notify: true
         },
         heading: {
           type: String,
           value: '000',
+          observer: 'setHeading',
           notify: true
         },
         options: {
           type: Object,
-          value: function() {
-            return {
+          value: {
               indicator: 'white',
               bezel: 'white',
               bearing: 'white',
               background: 'black',
-              headingFill: undefined,
+              headingFill: 'white',
               // will be set to options.bezel
               headingStrokeWidth: 0,
               headingStrokeWidthTargetHold: 15
-            };
-          }
+            }
         },
         target: {
           type: Number,
@@ -145,6 +142,7 @@
         }
       },
       setBearing: function(value) {
+        this.bearing=value;
         var bearing = $(this.$.bearing);
         var target = $(this.$.target);
         var lock = $(this.$.lock);
