--- a/src/plugins/new-ui/public/webcomponents/power.html
+++ b/src/plugins/new-ui/public/webcomponents/power.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<dom-module id="newui-power">
+<dom-module id="orov-newui-power">
   <style type="text/css">
 
       svg {
@@ -12,37 +12,37 @@
     <div id="batteryContainer">
       <svg id="svg2" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 95" height="100%" width="100%" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
         <metadata id="metadata7">
-          <rdf:rdf>
-            <cc:work rdf:about="">
+          <rdf:RDF>
+            <cc:Work rdf:about="">
               <dc:format>image/svg+xml</dc:format>
-              <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"></dc:type>
-              <dc:title></dc:title>
-            </cc:work>
-          </rdf:rdf>
+              <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/>
+              <dc:title/>
+            </cc:Work>
+          </rdf:RDF>
         </metadata>
         <g id="layer1" transform="translate(4.40625,-21.3125)">
-          <rect id="indicator" height="17.431" width="102.93" y="98.468" x="-4.1823" fill="#09531d"></rect>
-          <text id="voltage" style="word-spacing:0px;letter-spacing:0px;text-anchor:middle;text-align:center;" font-family="Sans" xml:space="preserve" font-size="12.9946394px" line-height="125%" font-style="normal" y="114.32999" x="95.878906" font-weight="normal" fill="#ffffff"><tspan id="tspan3893" y="114.32999" x="95.878906"><tspan id="tspan3895" font-size="20px" y="114.32999" x="95.878906" font-weight="bold" fill="#ffffff"><span>{{ voltage }}</span>v</tspan></tspan></text>
-          <path id="path3005" stroke-linejoin="miter" d="m81.992,90.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"></path>
-          <path id="path3775" stroke-linejoin="miter" d="m86.513,80.302,18.135,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.28410721" fill="none"></path>
-          <path id="path3777" stroke-linejoin="miter" d="m81.992,70.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"></path>
-          <path id="path3779" stroke-linejoin="miter" d="m86.513,60.302,18.135,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.28410721" fill="none"></path>
-          <path id="path3781" stroke-linejoin="miter" d="m81.992,50.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"></path>
-          <path id="path3783" stroke-linejoin="miter" d="m86.513,40.302,18.135,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.28410721" fill="none"></path>
-          <path id="path3785" stroke-linejoin="miter" d="m81.992,30.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"></path>
-          <rect id="rect3789" height="18.276" width="201.47" stroke="#FFF" stroke-miterlimit="4" x="-4.4282" y="98.058" stroke-dasharray="none" stroke-width="0.95604" fill="none"></rect>
+          <rect id="indicator" height="17.431" width="102.93" y="98.468" x="-4.1823" fill="#09531d"/>
+          <text id="voltage" style="word-spacing:0px;letter-spacing:0px;text-anchor:middle;text-align:center;" font-family="Helvetica Neue,Helvetica,Arial,sans-serif" xml:space="preserve" font-size="12.9946394px" line-height="125%" font-style="normal" y="114.32999" x="95.878906" font-weight="normal" fill="#ffffff"><tspan id="tspan3893" y="114.32999" x="95.878906"><tspan id="tspan3895" font-size="20px" y="114.32999" x="95.878906" font-weight="bold" fill="#ffffff"><tspan>{{ voltage }}</tspan>v</tspan></tspan></text>
+          <path id="path3005" stroke-linejoin="miter" d="m81.992,90.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"/>
+          <path id="path3775" stroke-linejoin="miter" d="m86.513,80.302,18.135,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.28410721" fill="none"/>
+          <path id="path3777" stroke-linejoin="miter" d="m81.992,70.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"/>
+          <path id="path3779" stroke-linejoin="miter" d="m86.513,60.302,18.135,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.28410721" fill="none"/>
+          <path id="path3781" stroke-linejoin="miter" d="m81.992,50.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"/>
+          <path id="path3783" stroke-linejoin="miter" d="m86.513,40.302,18.135,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.28410721" fill="none"/>
+          <path id="path3785" stroke-linejoin="miter" d="m81.992,30.313,27.188,0,0,0" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="2.79675651" fill="none"/>
+          <rect id="rect3789" height="18.276" width="201.47" stroke="#FFF" stroke-miterlimit="4" x="-4.4282" y="98.058" stroke-dasharray="none" stroke-width="0.95604" fill="none"/>
           <g id="left" transform="translate(14.107143,-6.2)">
-            <text id="text3903" style="letter-spacing:0px;text-anchor:end;word-spacing:0px;text-align:end;" font-family="Sans" xml:space="preserve" font-size="12.9946394px" line-height="125%" y="43.799999" font-style="normal" x="52.053917" font-weight="normal" fill="#ffffff"><tspan id="tspan3905" y="43.873199" x="52.053917"><tspan id="tspan3907" font-size="20px" y="43.873199" x="52.053917" font-weight="bold" fill="#ffffff">{{formatCurrent ( leftCurrent)}}</tspan></tspan></text>
+            <text id="text3903" style="letter-spacing:0px;text-anchor:end;word-spacing:0px;text-align:end;" font-family="Helvetica Neue,Helvetica,Arial,sans-serif" xml:space="preserve" font-size="12.9946394px" line-height="125%" y="43.799999" font-style="normal" x="52.053917" font-weight="normal" fill="#ffffff"><tspan id="tspan3905" y="43.873199" x="52.053917"><tspan id="tspan3907" font-size="20px" y="43.873199" x="52.053917" font-weight="bold" fill="#ffffff">{{ formatCurrent(leftCurrent) }}</tspan></tspan></text>
             <g id="g3825" stroke-linejoin="miter" transform="matrix(-0.81642344,0,0,-0.69560403,168.39252,81.485994)" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" fill="none">
-              <path id="path3827" stroke-width="1.80998755" d="m131.8,64.41,9.8628,5.6943,0,0"></path>
-              <path id="path3829" stroke-width="1.81007576" d="m131.8,64.702,9.8628-5.6943,0,0"></path>
+              <path id="path3827" stroke-width="1.80998755" d="m131.8,64.41,9.8628,5.6943,0,0"/>
+              <path id="path3829" stroke-width="1.81007576" d="m131.8,64.702,9.8628-5.6943,0,0"/>
             </g>
           </g>
           <g id="right" transform="translate(-16.428571,-6.2)">
-            <text id="text3897" style="letter-spacing:0px;text-anchor:middle;word-spacing:0px;text-align:center;" font-family="Sans" xml:space="preserve" font-size="12.9946394px" line-height="125%" font-style="normal" y="43.799999" x="141.93175" font-weight="normal" fill="#ffffff"><tspan id="tspan3899" y="43.829426" x="141.93175"><tspan id="tspan3901" style="text-anchor:start;text-align:start;" font-size="20px" y="43.829426" x="141.93175" font-weight="bold" fill="#ffffff">{{formatCurrent ( rightCurrent)}}</tspan></tspan></text>
+            <text id="text3897" style="letter-spacing:0px;text-anchor:middle;word-spacing:0px;text-align:center;" font-family="Helvetica Neue,Helvetica,Arial,sans-serif" xml:space="preserve" font-size="12.9946394px" line-height="125%" font-style="normal" y="43.799999" x="141.93175" font-weight="normal" fill="#ffffff"><tspan id="tspan3899" y="43.829426" x="141.93175"><tspan id="tspan3901" style="text-anchor:start;text-align:start;" font-size="20px" y="43.829426" x="141.93175" font-weight="bold" fill="#ffffff">{{ formatCurrent(rightCurrent) }}</tspan></tspan></text>
             <g id="g3821" stroke-linejoin="miter" transform="matrix(0.81642344,0,0,0.69560403,25.136018,-8.467932)" stroke="#FFF" stroke-linecap="butt" stroke-miterlimit="4" stroke-dasharray="none" stroke-width="1.81007576" fill="none">
-              <path id="path3815" d="m131.8,64.41,9.8628,5.6943,0,0"></path>
-              <path id="path3817" d="m131.8,64.702,9.8628-5.6943,0,0"></path>
+              <path id="path3815" d="m131.8,64.41,9.8628,5.6943,0,0"/>
+              <path id="path3817" d="m131.8,64.702,9.8628-5.6943,0,0"/>
             </g>
           </g>
         </g>
@@ -55,7 +55,7 @@
         return (this - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
       };
       Polymer({
-        is: 'newui-power',
+        is: 'orov-newui-power',
         properties: {
           colors: {
             type: Array,
@@ -158,6 +158,32 @@
             value: 5
           }
         },
+        behaviors: [namespace('behaviors').oROVStandard],
+        registerEmitterHanlders: function(emitter) {
+          var self = this;
+
+          emitter.on('plugin.controllerboard2x.systemPower.update', function(data){
+              if ('voltage' in data.board){
+                self.setVoltage(data.board.voltage);
+              };
+
+              if ('port' in data.battery.current){
+                self.setLeftBattery(data.battery.current.port);
+              };
+
+              if ('starboard' in data.battery.current){
+                self.setRightBattery(data.battery.current.starboard);
+              };
+          });
+
+          var setBatteryConfig = function (config) {
+            self.minVoltage = config.minVoltage;
+            self.maxVoltage = config.maxVoltage;
+            self.setVoltage(self.voltage);
+          };
+          emitter.emit('plugin.capestatus.request.battery.config', setBatteryConfig);
+          emitter.on('plugin.capestatus.battery.config', setBatteryConfig);
+        },
         setLeftBattery: function (current) {
           this.setCurrent($(this.$.left), this.leftIndicator, current);
           this.leftCurrent = current;
@@ -206,22 +232,7 @@
           this.setVoltage(this.voltage);
           this.setLeftBattery(this.leftCurrent);
           this.setRightBattery(this.rightCurrent);
-          window.cockpit.rov.on('plugin.capestatus.battery.voltage', function (voltage) {
-            self.setVoltage(voltage);
-          });
-          window.cockpit.rov.on('plugin.capestatus.battery.current.battery1', function (current) {
-            self.setLeftBattery(current);
-          });
-          window.cockpit.rov.on('plugin.capestatus.battery.current.battery2', function (current) {
-            self.setRightBattery(current);
-          });
-          var setBatteryConfig = function (config) {
-            self.minVoltage = config.minVoltage;
-            self.maxVoltage = config.maxVoltage;
-            self.setVoltage(self.voltage);
-          };
-          window.cockpit.rov.emit('plugin.capestatus.request.battery.config', setBatteryConfig);
-          window.cockpit.rov.on('plugin.capestatus.battery.config', setBatteryConfig);
+
         }
       });
     }());
