--- a/src/plugins/new-ui/public/webcomponents/throttle.html
+++ b/src/plugins/new-ui/public/webcomponents/throttle.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<dom-module id="newui-throttle">
+<dom-module id="orov-newui-throttle">
   <style>
       #container {
         width: 90%;
@@ -31,67 +31,187 @@
         viewbox="0 0 106.5676 815.15717"
         -->
 
-      <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="106.5676" height="815.15717" viewBox="0 0 106.5676 815.15717" id="svg2">
-        <defs id="defs4"></defs>
-        <metadata id="metadata7">
-          <rdf:rdf>
-            <cc:work rdf:about="">
+      <svg
+         xmlns:dc="http://purl.org/dc/elements/1.1/"
+         xmlns:cc="http://creativecommons.org/ns#"
+         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+         xmlns:svg="http://www.w3.org/2000/svg"
+         xmlns="http://www.w3.org/2000/svg"
+         version="1.1"
+         width="106.5676"
+         height="815.15717"
+         viewbox="0 0 106.5676 815.15717"
+         id="svg2">
+        <defs
+           id="defs4" />
+        <metadata
+           id="metadata7">
+          <rdf:RDF>
+            <cc:Work
+               rdf:about="">
               <dc:format>image/svg+xml</dc:format>
-              <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"></dc:type>
+              <dc:type
+                 rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
               <dc:title></dc:title>
-            </cc:work>
-          </rdf:rdf>
+            </cc:Work>
+          </rdf:RDF>
         </metadata>
-        <g id="layer1">
-          <g id="maxThrottle">
-            <rect width="20.439806" height="131.31982" x="2.6261578" y="341.21436" id="rect3779" style="fill:#ffffff;fill-opacity:1;stroke:none"></rect>
-            <rect width="20.440001" height="131.31982" x="84.551224" y="341.21436" id="rect3781" style="fill:#fff9f9;fill-opacity:1;stroke:none"></rect>
+        <g
+           id="layer1">
+          <g
+             id="maxThrottle">
+            <rect
+               width="20.439806"
+               height="131.31982"
+               x="2.6261578"
+               y="341.21436"
+               id="rect3779"
+               style="fill:#ffffff;fill-opacity:1;stroke:none" />
+            <rect
+               width="20.440001"
+               height="131.31982"
+               x="84.551224"
+               y="341.21436"
+               id="rect3781"
+               style="fill:#fff9f9;fill-opacity:1;stroke:none" />
           </g>
-          <rect width="30.840309" height="173.74623" x="38.606461" y="221.30832" id="throttle" style="fill:#cccccc;fill-opacity:1;stroke:none"></rect>
+          <rect
+             width="30.840309"
+             height="173.74623"
+             x="38.606461"
+             y="221.30832"
+             id="throttle"
+             style="fill:#cccccc;fill-opacity:1;stroke:none" />
         </g>
-        <path d="m 1.0500002,407.07541 104.9296498,0" id="mid" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-        <g id="g3046">
-          <g transform="translate(0,-38.546504)" id="g3018">
-            <path d="m 2.621677,345.62167 20.362028,0" id="mid-7" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3016" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+        <path
+           d="m 1.0500002,407.07541 104.9296498,0"
+           id="mid"
+           style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+        <g
+           id="g3046">
+          <g
+             transform="translate(0,-38.546504)"
+             id="g3018">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="mid-7"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3016"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-115.4215)" id="g3022">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3024" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3026" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-115.4215)"
+             id="g3022">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3024"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3026"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-192.2965)" id="g3028">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3030" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3032" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-192.2965)"
+             id="g3028">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3030"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3032"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-269.1715)" id="g3034">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3036" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3038" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-269.1715)"
+             id="g3034">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3036"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3038"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-341.1715)" id="g3040">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3042" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3044" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-341.1715)"
+             id="g3040">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3042"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3044"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
         </g>
-        <g transform="matrix(-1,0,0,-1,107.60539,816.09046)" id="g3063">
-          <g transform="translate(0,-38.546504)" id="g3065">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3067" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3069" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+        <g
+           transform="matrix(-1,0,0,-1,107.60539,816.09046)"
+           id="g3063">
+          <g
+             transform="translate(0,-38.546504)"
+             id="g3065">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3067"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3069"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-115.4215)" id="g3071">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3073" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3075" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-115.4215)"
+             id="g3071">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3073"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3075"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-192.2965)" id="g3077">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3079" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3081" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-192.2965)"
+             id="g3077">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3079"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3081"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-269.1715)" id="g3083">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3085" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3087" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-269.1715)"
+             id="g3083">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3085"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3087"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
-          <g transform="translate(0,-341.1715)" id="g3089">
-            <path d="m 2.621677,345.62167 20.362028,0" id="path3091" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
-            <path d="m 84.621677,345.62167 20.362033,0" id="path3093" style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"></path>
+          <g
+             transform="translate(0,-341.1715)"
+             id="g3089">
+            <path
+               d="m 2.621677,345.62167 20.362028,0"
+               id="path3091"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
+            <path
+               d="m 84.621677,345.62167 20.362033,0"
+               id="path3093"
+               style="fill:none;stroke:#ffffff;stroke-width:10;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none" />
           </g>
         </g>
       </svg>
@@ -118,7 +238,7 @@
       return Math.max(l, Math.min(h, value));
     }
     Polymer({
-      is: 'newui-throttle',
+      is: 'orov-newui-throttle',
       properties: {
         height: {
           type: Number,
@@ -133,21 +253,26 @@
           value: 0
         }
       },
+      behaviors: [namespace('behaviors').oROVStandard],
+      registerEmitterHanlders: function(emitter) {
+        var self = this;
+        emitter.on('plugin.rovpilot.setPowerLevel', function (level) {
+          self.setPowerLevel(level);
+        });
+        emitter.on('plugin.rovpilot.controls', function (data) {
+          console.log(data);
+          self.setVertical(Number(data.vertical));
+          self.setPort(Number(data.port));
+          self.setStarboard(Number(data.starbord));
+        });
+      },
       attached: function () {
         var self = this;
         var template = $(this.$.template).find('svg');
         template.clone().appendTo($(this.$.port));
         template.clone().appendTo($(this.$.vertical));
         template.clone().appendTo($(this.$.starboard));
-        window.cockpit.rov.on('plugin.rovpilot.powerLevel', function (level) {
-          self.setPowerLevel(level);
-        });
-        window.cockpit.rov.on('plugin.rovpilot.controls', function (data) {
-          console.log(data);
-          self.setVertical(Number(data.vertical));
-          self.setPort(Number(data.port));
-          self.setStarboard(Number(data.starbord));
-        });
+
         var self = this;
         self.setVertical(1500);
         self.setPort(1500);
