Throttle now gets power level msgs.
While this wires everything up, it shows the amount of code needed for
initialization as well as ongoing event handling. May need to consider
using a message store and forward service.  Moved the power level
concept back to the ROV to make it global for all connected users.

--- a/src/plugins/new-ui/public/webcomponents/throttle.html
+++ b/src/plugins/new-ui/public/webcomponents/throttle.html
@@ -265,6 +265,11 @@
           self.setPort(Number(data.port));
           self.setStarboard(Number(data.starbord));
         });
+        emitter.emit('plugin.rovpilot.getState',function(state){
+          if (state.powerLevel !== undefined){
+            self.setPowerLevel(state.powerLevel);
+          }
+        });
       },
       attached: function () {
         var self = this;
