NewUI Pop ups working

--- a/src/plugins/navigation-data/public/webcomponents/orov-horizon.html
+++ b/src/plugins/navigation-data/public/webcomponents/orov-horizon.html
@@ -26,7 +26,8 @@
 * IN THE SOFTWARE.
 *
 */
---><html><head><link rel="import" href="../polymer/polymer.html">
+-->
+<link rel="import" href="../polymer/polymer.html">
 
 <dom-module id="orov-horizon">
   <style type="text/css">
