--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -45,8 +45,8 @@
   <template>
     <div id="switchesContainer" class="center">
       <div class="switches-header-row">
-        <div class="switches-switch-on">ON</div>
-        <div class="switches-switch-off">OFF</div>
+        <div class="switches-switch-on">{{__('ON')}}</div>
+        <div class="switches-switch-off">{{__('OFF')}}</div>
       </div>
 
     </div>
