--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -9,8 +9,9 @@
       src='{{videoSource}}'
       framespersecond='{{framesPerSecond}}'
       canvas='{{canvas}}'
-      cors='false' 
+      cors='false'
       showMenu='true'>
+      <content></content>
      </mjpeg-video>
   </template>
   <script>
